RESOLVED FIXED238686
Ensure generalStorageDirectory is not in use when creating WebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=238686
Summary Ensure generalStorageDirectory is not in use when creating WebsiteDataStore
Sihui Liu
Reported 2022-04-01 16:19:29 PDT
...
Attachments
Patch (5.07 KB, patch)
2022-04-01 16:30 PDT, Sihui Liu
no flags
Patch (5.06 KB, patch)
2022-04-05 09:47 PDT, Sihui Liu
ews-feeder: commit-queue-
Patch (4.96 KB, patch)
2022-04-05 10:01 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2022-04-01 16:19:42 PDT
Sihui Liu
Comment 2 2022-04-01 16:30:25 PDT
Sihui Liu
Comment 3 2022-04-05 09:47:40 PDT
Chris Dumez
Comment 4 2022-04-05 09:52:27 PDT
Comment on attachment 456709 [details] Patch r=me
Sihui Liu
Comment 5 2022-04-05 10:01:15 PDT
EWS
Comment 6 2022-04-05 14:39:15 PDT
Committed r292426 (249286@main): <https://commits.webkit.org/249286@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456711 [details].
Note You need to log in before you can comment on or make changes to this bug.